# queue_keeper

./: .dockerignore  .gitignore  .release-regent.toml  .tech-decisions.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  catalog.config.yml  cliff.toml  deny.toml  mkdocs.yml  renovate.json  requirements-docs.txt
.cargo/: audit.toml
.github/scripts/: update_github_label_colors.ps1
.github/workflows/: ci.yml  claude-pr-review.yml  docs.yml  e2e-tests.yml  find_mutants_in_pr.yml  integration-tests.yml  lint.yml  release-comment.yml  release-pr.yml  release.yml  version-check.yml
crates/github-bot-sdk/: Cargo.toml
crates/github-bot-sdk/src/: error.rs  error_tests.rs  lib.rs
crates/github-bot-sdk/src/auth/: cache.rs  cache_tests.rs  jwt.rs  jwt_tests.rs  mod.rs  mod_tests.rs  tokens.rs  tokens_tests.rs
crates/github-bot-sdk/src/client/: app.rs  app_tests.rs  installation.rs  installation_tests.rs  issue.rs  issue_tests.rs  mod.rs  mod_tests.rs  pagination.rs  pagination_tests.rs  project.rs  project_tests.rs  pull_request.rs  pull_request_tests.rs  rate_limit.rs  rate_limit_tests.rs  release.rs  release_tests.rs  repository.rs  repository_tests.rs  retry.rs  retry_tests.rs  workflow.rs  workflow_tests.rs
crates/github-bot-sdk/src/events/: github_events.rs  github_events_tests.rs  mod.rs  mod_tests.rs  processor.rs  processor_tests.rs  session.rs  session_tests.rs
crates/github-bot-sdk/src/webhook/: handler.rs  handler_tests.rs  mod.rs  mod_tests.rs  receiver.rs  receiver_tests.rs  validation.rs  validation_tests.rs
crates/queue-keeper-api/: Cargo.toml
crates/queue-keeper-api/src/: azure_config.rs  azure_config_tests.rs  config.rs  config_tests.rs  dlq_storage.rs  dlq_storage_tests.rs  errors.rs  lib.rs  lib_tests.rs  metrics.rs  middleware.rs  middleware_tests.rs  provider_registry.rs  provider_registry_tests.rs  queue_delivery.rs  queue_delivery_tests.rs  responses.rs  responses_tests.rs  retry.rs  retry_tests.rs
crates/queue-keeper-api/src/handlers/: health.rs  mod.rs  webhook.rs
crates/queue-keeper-cli/: Cargo.toml
crates/queue-keeper-cli/src/: lib.rs  lib_tests.rs  main.rs
crates/queue-keeper-core/: Cargo.toml
crates/queue-keeper-core/src/: audit_logger_backends_tests.rs  audit_logging.rs  audit_logging_tests.rs  audit_query_retention_tests.rs  blob_storage.rs  blob_storage_tests.rs  bot_config.rs  bot_config_tests.rs  event_replay.rs  key_vault.rs  key_vault_tests.rs  lib.rs  lib_tests.rs  monitoring.rs  monitoring_tests.rs  queue_integration.rs  queue_integration_tests.rs
crates/queue-keeper-core/src/adapters/: azure_key_vault.rs  azure_key_vault_tests.rs  circuit_breaker_key_vault.rs  circuit_breaker_key_vault_tests.rs  filesystem_storage.rs  filesystem_storage_tests.rs  memory_key_vault.rs  memory_key_vault_tests.rs  mod.rs
crates/queue-keeper-core/src/circuit_breaker/: breaker.rs  breaker_tests.rs  mod.rs  mod_tests.rs
crates/queue-keeper-core/src/webhook/: generic_provider.rs  generic_provider_tests.rs  github_provider.rs  github_provider_tests.rs  mod.rs  mod_tests.rs  processing_output.rs  processing_output_tests.rs  storage_adapter.rs  storage_adapter_tests.rs
crates/queue-keeper-e2e-tests/: Cargo.toml
crates/queue-keeper-e2e-tests/src/: lib.rs
crates/queue-keeper-e2e-tests/tests/: admin_endpoints.rs  api_endpoints.rs  error_responses.rs  health_endpoints.rs  performance.rs  webhook_endpoints.rs
crates/queue-keeper-e2e-tests/tests/common/: mod.rs
crates/queue-keeper-integration-tests/: Cargo.toml
crates/queue-keeper-integration-tests/src/: lib.rs
crates/queue-keeper-integration-tests/tests/: blob_storage.rs  configuration.rs  health_checks.rs  middleware.rs  queue_delivery.rs  routing.rs  webhook_processing.rs
crates/queue-keeper-integration-tests/tests/common/: mod.rs
crates/queue-keeper-service/: Cargo.toml
crates/queue-keeper-service/src/: dlq_storage_tests.rs  error_handling_tests.rs  health_tests.rs  lib.rs  lib_tests.rs  main.rs  middleware_tests.rs  queue_delivery.rs  queue_delivery_tests.rs  retry.rs  retry_tests.rs  shutdown_tests.rs  signature_validator.rs  signature_validator_tests.rs
crates/queue-keeper-service/src/circuit_breaker/: github.rs  github_tests.rs  mod.rs  queue.rs  queue_tests.rs
crates/queue-runtime/: Cargo.toml
crates/queue-runtime/src/: client.rs  client_tests.rs  error.rs  error_tests.rs  lib.rs  lib_tests.rs  message.rs  message_tests.rs  provider.rs  provider_tests.rs  sessions.rs  sessions_tests.rs
crates/queue-runtime/src/providers/: aws.rs  aws_tests.rs  azure.rs  azure_tests.rs  memory.rs  memory_tests.rs  mod.rs
docs/: api.md  bot-integration.md  configuration.md  container-usage.md  provider-examples.md  queue-message-format.md
docs/adr/: ADR-0001-provider-routing-strategy.md  ADR-0002-generic-provider-abstraction.md
docs/catalog/: api.md  cli.md  core.md  index.md  scripts.md  service.md
docs/user/: index.md
github-bot-sdk-specs/: README.md  architecture.md  assertions.md  constraints.md  responsibilities.md  vocabulary.md
github-bot-sdk-specs/architecture/: app-level-authentication.md  integration.md  security.md
github-bot-sdk-specs/interfaces/: README.md  additional-operations.md  installation-client.md  issue-operations.md  pagination.md  project-operations.md  pull-request-operations.md  rate-limiting-retry.md  repository-operations.md
github-bot-sdk-specs/modules/: auth.md  client.md  events.md
queue-runtime-specs/: README.md  architecture.md  assertions.md  constraints.md  responsibilities.md  vocabulary.md
queue-runtime-specs/architecture/: naming.md  performance.md  providers.md  sessions.md
queue-runtime-specs/modules/: aws.md  azure.md  client.md  dlq.md  messages.md  observability.md  retry.md  testing.md
scripts/: run-e2e-tests.ps1  run-e2e-tests.sh  update_catalog.py  validate-container.ps1  validate-container.sh
specs/: README.md  assertions.md  constraints.md  integration.md  responsibilities.md  shared-registry.md  vocabulary.md
specs/architecture/: README.md  container-deployment.md  (+1 more)
(+55 files in other folders)
