[workspace]
members = [
    "crates/queue-keeper-core",
    "crates/queue-keeper-cli",
    "crates/queue-keeper-service",
    "crates/github-bot-sdk",
    "crates/queue-runtime",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-br",
    "compression-gzip",
] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["metrics", "trace"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
hmac = "0.12"
sha2 = "0.10"

# Configuration
config = { version = "0.15", default-features = false, features = [
    "toml",
    "json",
    "yaml",
    "ini",
    "ron",
    "convert-case",
    "async",
] }
toml = "0.9"
clap = { version = "4.4", features = ["derive", "env"] }

# Azure integrations
azure_core = "0.30"
azure_identity = "0.30"
azure_storage_blobs = "0.21"
azure_security_keyvault = "0.21"
azure_messaging_servicebus = "0.21"

# AWS integrations (future)
aws-config = "1.0"
aws-sdk-sqs = "1.0"
aws-sdk-secretsmanager = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
ulid = "1.2"
bytes = "1.5"
url = "2.5"
rand = "0.9"
hex = "0.4"

# Testing
mockall = "0.13"
wiremock = "0.6"

[profile.release]
# Optimize for performance and size
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true
