[package]
name = "github-bot-sdk"
version = "0.1.0"
edition = "2021"
description = "GitHub Bot SDK for Queue-Keeper"
license = "Apache-2.0"
repository = "https://github.com/pvandervelde/queue_keeper"

[dependencies]
# Core dependencies
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# JWT and crypto
jsonwebtoken = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rsa = "0.9"
subtle = "2.6"
hex = { workspace = true }

# Date/time
chrono = { workspace = true }

# Random number generation for jitter
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Bytes
bytes = { workspace = true }

# Base64 encoding
base64 = "0.22"

# URL handling
url = { workspace = true }

[dev-dependencies]
tempfile = "=3.23.0"
tokio-test = "=0.4.4"
wiremock = "=0.6.5"
