[package]
name = "queue-keeper-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Queue-Keeper"
license = "MIT"
repository = "https://github.com/pvandervelde/queue_keeper"

[dependencies]
# Core dependencies
queue-keeper-core = { path = "../queue-keeper-core" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# CLI framework
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"
dirs = "6.0"

# Configuration
config = "0.15"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "=3.23.0"
assert_cmd = "=2.0.17"
predicates = "=3.1.3"
