[package]
name = "queue-keeper-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Queue-Keeper"
license = "MIT"
repository = "https://github.com/pvandervelde/queue_keeper"

[dependencies]
# Core dependencies
queue-keeper-core = { path = "../queue-keeper-core", version = "0.1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# CLI framework
clap = { workspace = true }
clap_complete = "4.0"
dirs = "6.0"

# Configuration
config = { workspace = true }
toml = "0.9"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Date/time
chrono = { workspace = true }

# Async runtime
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "=3.23.0"
assert_cmd = "=2.1.1"
predicates = "=3.1.3"
