[package]
authors.workspace = true
description = "Command-line interface for Queue-Keeper"
edition.workspace = true
license.workspace = true
name = "queue-keeper-cli"
version.workspace = true

[dependencies]
# Core dependencies
queue-keeper-core = { path = "../queue-keeper-core", version = "0.1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# CLI framework
clap = { workspace = true }
clap_complete = "4"
dirs = "6.0"

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Date/time
chrono = { workspace = true }

# Async runtime
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
