[package]
name = "queue-keeper-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
bytes = { workspace = true }

# Dependencies on library crates
github-bot-sdk = { path = "../github-bot-sdk", version = "0.1.0" }
queue-runtime = { path = "../queue-runtime", version = "0.1.0" }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "=0.4.4"
