[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "queue-keeper-core"
version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Pattern matching
regex = "1.11"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
bytes = { workspace = true }

# Cryptography
hmac = { workspace = true }
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
subtle = { workspace = true }

# Azure SDK dependencies
futures = { version = "0.3", optional = true }
azure_security_keyvault = { version = "0.21", optional = true }
azure_identity = { version = "0.21", optional = true }
azure_core = { version = "0.21", optional = true }

# Dependencies on library crates
github-bot-sdk = { workspace = true }
queue-runtime = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "=0.4.4"
tempfile = "=3.25.0"

[features]
default = []
azure = ["futures", "azure_security_keyvault", "azure_identity", "azure_core"]
