[[bin]]
name = "queue-keeper-service"
path = "src/main.rs"

[package]
name = "queue-keeper-service"
version = "0.1.0"
edition = "2021"
description = "HTTP service for receiving GitHub webhooks"
license = "MIT"
repository = "https://github.com/pvandervelde/queue_keeper"

[dependencies]
# HTTP API library
queue-keeper-api = { path = "../queue-keeper-api", version = "0.1.0" }

# Core dependencies
queue-keeper-core = { path = "../queue-keeper-core", version = "0.1.0" }
queue-runtime = { path = "../queue-runtime", version = "0.1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
