[[bin]]
name = "queue-keeper-service"
path = "src/main.rs"

[package]
name = "queue-keeper-service"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

description = "HTTP service for receiving GitHub webhooks"


[dependencies]
# HTTP API library
queue-keeper-api = { path = "../queue-keeper-api", version = "0.1.0" }

# Core dependencies
queue-keeper-core = { path = "../queue-keeper-core", version = "0.1.0" }
queue-runtime = { path = "../queue-runtime", version = "0.1.0" }
github-bot-sdk = { path = "../github-bot-sdk", version = "0.1.0" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
