[package]
description = "Multi-provider queue runtime for Queue-Keeper"
edition = "2021"
license = "Apache-2.0"
name = "queue-runtime"
repository = "https://github.com/pvandervelde/queue_keeper"
version = "0.1.0"

[dependencies]
# Core dependencies
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Azure Service Bus
azure_messaging_servicebus = { workspace = true }
azure_core = { workspace = true }
azure_identity = { workspace = true }

# AWS SQS
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }

# Configuration
config = { workspace = true }

# Utilities
url = { workspace = true }
bytes = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "=3.23.0"
tokio-test = "=0.4.4"
